--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   </ul>
     
 <script src="https://utteranc.es/client.js"
-        repo="Abcd136/x"
+        repo="Abcd136/x36"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
